apps/archmirror/web/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: default-conf
          configMap:
            name: default-conf
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/archmirror/config"
            server: 10.10.20.10
        - name: data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/archmirror/data"
            server: 10.10.20.10
        - name: cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: pid
          emptyDir: {}
      containers:
        - name: http-server
          image: nginx:1.31.6-alpine-slim@sha256:5a9423ea46b45f4025fe28a74c7ccea42291c8f54f828c7cadc2d75faca1abe5
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
          livenessProbe:
            exec:
              command:
                - cat
                - /data/lastsync
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /lastsync
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: default-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: config
              mountPath: /config
              readOnly: true
            - name: data
              mountPath: /data
              readOnly: true
            - name: cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp/nginx
            - name: pid
              mountPath: /var/run
